[package]
name = "body_sculpting"
version = "0.1.0"
authors = ["Thomas Markiewicz <tomek@liberty.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/xi-editor/druid.git", branch = "master" }
